with experimental flags