@@ -1,7 +1,9 @@
 #!/usr/bin/env bash
 
 exec java \
+    -XX:+UnlockExperimentalVMOptions \
+    -XX:+UseCGroupMemoryLimitForHeap \
     -XX:NativeMemoryTracking=summary \
     -XshowSettings:vm \
     -Dplay.http.secret.key=${PLAY_HTTP_SECRET_KEY} \
-    -jar /app/application.jar
+    -jar /app/assembly.jar
